--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "gatsby": "^5.7.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^3.7.0",
+    "gatsby-plugin-postcss": "^6.7.0",
     "gatsby-plugin-sharp": "^5.7.0",
     "gatsby-source-filesystem": "^5.7.0",
     "gatsby-transformer-sharp": "^5.7.0",
+    "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
-    "@types/node": "^18.15.0",
+    "@types/node": "^18.15.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "typescript": "^4.9.5"
